[tool.poetry]
name = "uas_assetbank"
version = "v0.1.0"
description = "Simple and fast asset banks manager"
authors = ["Ubisoft Animation Studio <ubisoft.animation.studio@ubisoft.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
"fake-bpy-module-2.82" = "^20200514"
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
pep8-naming = "^0.10.0"
auto-changelog = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"